...
            android:text="username: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/login_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Username Here">
        </EditText>

    </LinearLayout>
...
            android:text="password: "
            android:textSize="20dp"
            android:textColor="#000000">
        </TextView>

        <EditText
            android:id="@+id/login_password_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:hint="Enter Password Here">
        </EditText>

...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Login"
            android:textSize="20sp"
            android:textColor="#ffffff">
        </Button>

        <Button
            android:id="@+id/login_signup_btn"
...
